--- a/index.html
+++ b/index.html
@@ -245,4 +245,14 @@
     
     <script src="./app.js"></script>
 </body>
+<div id="ios-install-guide" style="display:none; text-align:center; padding: 15px; margin-top: 10px; background-color: #333; color: white; border-radius: 8px;">
+    <p style="font-weight: bold; margin-bottom: 10px;">
+        Tap ⬆️ to Install App
+    </p>
+    <p style="font-size: 0.9em; margin: 0;">
+        To install **Filipino Budget Tracker**, please tap the 
+        <span style="font-size:1.2em; color: aqua; font-weight: bold;">Share icon (⬆️)</span>
+        in your browser menu, then tap **Add to Home Screen**.
+    </p>
+</div>
 </html>
